--- a/Proyecto_proveedores/vistas/encabezado.html
+++ b/Proyecto_proveedores/vistas/encabezado.html
@@ -21,6 +21,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="?opcion=articulos">Artículos</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="?opcion=proveedores">Proveedores</a>
+                </li>
             </ul>
         </div>
     </div>
